--- a/src/componentsContainer/Header/style.css
+++ b/src/componentsContainer/Header/style.css
@@ -18,3 +18,45 @@
     align-items: center;
     gap: 46px;
 }
+
+.header-mobileButton {
+    display: none;
+}
+
+@media (width < 1025px) {
+    .header-mobileButton {
+        display: block;
+        width: 27px;
+        height: 7px;
+        position: relative;
+    }
+    .header-mobileButton-line {
+        width: 100%;
+        height: 1px;
+        background-color: var(--text-color);
+        position: absolute;
+    }
+    .header-mobileButton-topLine {
+        top: 0;
+    }
+    .header-mobileButton-bottomLine {
+        bottom: 0;
+    }
+    .headerContainer-utilsContainer {
+        position: absolute;
+        right: -100%;
+        top: 100%;
+        background-color: var(--text-color);
+        color: var(--white-color);
+        transition: 0.4s ease-in-out;
+        width: 100%;
+        gap: 0;
+        padding-left: 30px;
+        padding-right: 45px;
+        box-sizing: border-box;
+        align-items: flex-start;
+    }
+    .headerContainer-utilsContainer-enter {
+        right: 0;
+    }
+}
