--- a/src/componentsContainer/Header/style.css
+++ b/src/componentsContainer/Header/style.css
@@ -5,7 +5,7 @@
     padding-left: 80px;
     padding-right: 80px;
     margin-top: 35px;
-    color:  var(--text-color);
+    color: var(--text-color);
     position: fixed;
     z-index: 5;
     width: 100%;
@@ -30,18 +30,33 @@
         height: 7px;
         position: relative;
     }
+
     .header-mobileButton-line {
         width: 100%;
         height: 1px;
         background-color: var(--text-color);
         position: absolute;
+        transition: 0.4s ease-in-out;
     }
+
     .header-mobileButton-topLine {
         top: 0;
     }
+
     .header-mobileButton-bottomLine {
         bottom: 0;
     }
+
+    .header-mobileButton-active .header-mobileButton-topLine {
+        transform: rotate(45deg) translateY(4px);
+        transform-origin: center;
+    }
+
+    .header-mobileButton-active .header-mobileButton-bottomLine {
+        transform: rotate(-45deg) translateY(-4px);
+        transform-origin: center;
+    }
+
     .headerContainer-utilsContainer {
         position: absolute;
         right: -100%;
@@ -56,6 +71,7 @@
         box-sizing: border-box;
         align-items: flex-start;
     }
+
     .headerContainer-utilsContainer-enter {
         right: 0;
     }
