--- a/src/components/ItemsGallery/style.css
+++ b/src/components/ItemsGallery/style.css
@@ -1,7 +1,7 @@
 .itemsGalleryContainer {
     width: 100%;
     height: 100vh;
-    min-height: 700px;
+    min-height: 840px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -47,9 +47,9 @@
 }
 
 .itemsGallery-titlesContainer li {
-    font-size: 6.25rem;
+    font-size: 100px;
     font-weight: 700;
-    line-height: 7.813rem;
+    line-height: 125px;
     text-align: center;
     cursor: pointer;
     transition: 0.4s ease-in-out;
@@ -69,7 +69,7 @@
     position: absolute;
     right: -100%;
     height: 100%;
-    width: 460px;
+    width: 500px;
     transition: 0.4s ease-in-out;
     background-color: #fff;
     padding-top: 120px;
@@ -84,18 +84,18 @@
 
 .itemsGallery-textAsideContainer p {
     font-family: "Darker Grotesque", sans-serif;
-    font-size: 1.5rem;
+    font-size: 24px;
     font-weight: 500;
-    line-height: 1.5rem;
+    line-height: 24px;
     text-align: left;
     margin-bottom: 48px;
 }
 
 .itemsGallery-textAsideContainer h3 {
-    font-size: 1.25rem;
+    font-size: 20px;
     font-style: italic;
     font-weight: 400;
-    line-height: 1.563rem;
+    line-height: 25px;
     position: absolute;
     bottom: 60px;
     right: 60px;
@@ -108,7 +108,7 @@
     width: 100%;
     height: 1px;
     position: absolute;
-    bottom: 0.6rem;
+    bottom: 9.6px;
     left: 0;
 }
 
