--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -13,7 +13,7 @@
 }
 
 .navbarContainer .navLink-special {
-    border: 1px solid var(--text-color);
+    border: 1px solid var(--white-color);
     padding: 10px 30px;
     position: relative;
     overflow: hidden;
