--- a/src/componentsContainer/Header/style.css
+++ b/src/componentsContainer/Header/style.css
@@ -4,10 +4,13 @@
     align-items: center;
     padding-left: 80px;
     padding-right: 80px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     margin-top: 35px;
-    color: var(--text-color);
+    color: var(--white-color);
+    background-color: var(--text-color);
     position: fixed;
-    z-index: 5;
+    z-index: 10;
     width: 100%;
     box-sizing: border-box;
 }
