--- a/src/views/Services/style.css
+++ b/src/views/Services/style.css
@@ -27,6 +27,17 @@
     transform: translateY(-150%);
 }
 
+.servicesPage-section-title {
+    margin: 0;
+    font-size: 2rem;
+    font-weight: 400;
+    line-height: 2.5rem;
+    width: 40%;
+    margin-left: 90px;
+    margin-top: 120px;
+    margin-bottom: 119px;
+}
+
 @media (799px < width < 1025px) {
     .servicesPage-section-title {
         font-size: 1.125rem;
