--- a/src/components/SwippeableGallery/style.css
+++ b/src/components/SwippeableGallery/style.css
@@ -8,6 +8,7 @@
     aspect-ratio: 834/705;
     overflow: hidden;
     height: 100%;
+    min-height: 540px;
 }
 
 .swippeableGalleryWrapper {
@@ -83,6 +84,11 @@
 .margin-30 {
     margin-top: 30px;
     margin-bottom: 30px;
+}
+
+.size-12 {
+    width: 12px;
+    height: 12px;
 }
 
 @media (width < 800px) {
