--- a/src/componentsContainer/Header/style.css
+++ b/src/componentsContainer/Header/style.css
@@ -37,7 +37,7 @@
     .header-mobileButton-line {
         width: 100%;
         height: 1px;
-        background-color: var(--text-color);
+        background-color: var(--white-color);
         position: absolute;
         transition: 0.4s ease-in-out;
     }
@@ -71,6 +71,7 @@
         gap: 0;
         padding-left: 30px;
         padding-right: 45px;
+        padding-bottom: 20px;
         box-sizing: border-box;
         align-items: flex-start;
     }
