--- a/src/components/LangButton/style.css
+++ b/src/components/LangButton/style.css
@@ -1,6 +1,7 @@
 .dropDown {
     position: relative;
     width: 4rem;
+    padding: 10px 20px;
 }
 
 .dropDown-button {
@@ -52,8 +53,9 @@
 }
 
 .dropDown-hiddenContent {
-    position: absolute;
+
     width: inherit;
+    width: 100%;
     top: 0%;
     z-index: 1;
     max-height: 0;
@@ -75,7 +77,7 @@
     list-style: none;
     padding: 0;
     transition: 0.1s ease-in-out;
-    color: var(--text-color);
+    color: var(--white-color);
     font-size: 1.125rem;
     font-weight: 400;
     line-height: 1.721rem;
@@ -84,9 +86,8 @@
 }
 
 .dropDown-hiddenContent li:hover {
-    background-color: var(--second-color);
     cursor: pointer;
-    color: var(--main-color)
+    color: var(--red-color)
 }
 
 @media (width < 1025px) {
