--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -4,8 +4,12 @@
     margin: 0;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     gap: 46px;
+}
+
+.navbarContainer ul li {
+    padding: 10px 20px;
 }
 
 .navbarContainer ul li a {
@@ -32,7 +36,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: var(--text-color);
+    background-color: var(--white-color);
     z-index: 0;
     transform: translateY(100%);
     transition: transform 0.3s ease-in-out;
@@ -51,15 +55,15 @@
     z-index: 1;
 }
 
-.navLink-line-animation {
+.navLink-line-animation a {
     position: relative;
 }
 
-.navLink-line-animation::before {
+.navLink-line-animation a::before {
     content: "";
     width: 100%;
     height: 1px;
-    background-color: var(--text-color);
+    background-color: var(--white-color);
     transition: 0.2s ease-in-out;
     position:absolute;
     bottom: -2px;
@@ -69,7 +73,11 @@
     transition: transform 0.2s ease-in-out;
 }
 
-.navLink-line-animation:hover::before {
+.navLink-specialColor:hover {
+    color: rgb(22, 22, 23)!important;
+}
+
+.navLink-line-animation a:hover::before {
     transform: scaleX(1);
     transform-origin: left;
 }
