--- a/src/componentsContainer/Header/style.css
+++ b/src/componentsContainer/Header/style.css
@@ -1,14 +1,15 @@
 .headerContainer {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     padding-left: 80px;
     padding-right: 80px;
     padding-top: 10px;
     padding-bottom: 10px;
     margin-top: 35px;
     color: var(--white-color);
-    background-color: var(--text-color);
+    background-color: rgba(22, 22, 23, 0.85);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     position: fixed;
     z-index: 10;
     width: 100%;
@@ -18,7 +19,7 @@
 .headerContainer-utilsContainer {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     gap: 46px;
 }
 
