--- a/src/components/SwippeableGallery/style.css
+++ b/src/components/SwippeableGallery/style.css
@@ -5,7 +5,7 @@
 
 .swippeableGalleryWindow {
     width: 100%;
-    aspect-ratio: 834/705;
+    aspect-ratio: 840/705;
     overflow: hidden;
     height: 100%;
     min-height: 540px;
@@ -64,7 +64,7 @@
 }
 
 .swippeableGallery-item-bannerText p {
-    font-size: 1rem;
+    font-size: clamp(16px, 1rem, 18px);
     font-weight: 400;
     line-height: 1.25rem;
     text-align: left;
@@ -99,6 +99,7 @@
 
     .swippeableGalleryWindow {
         border-radius: 101px 15px 40px 20px;
+        aspect-ratio: 2/3;
     }
 
     .swippeableGallery-item h2 {
@@ -107,7 +108,6 @@
     }
 
     .swippeableGallery-item-bannerText p {
-        font-size: 1rem;
         line-height: 1.25rem;
         width: 98%;
     }
