--- a/src/componentsContainer/Header/style.css
+++ b/src/componentsContainer/Header/style.css
@@ -6,7 +6,6 @@
     padding-right: 80px;
     padding-top: 10px;
     padding-bottom: 10px;
-    margin-top: 35px;
     color: var(--white-color);
     background-color: rgba(22, 22, 23, 0.85);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -33,6 +32,7 @@
         width: 27px;
         height: 7px;
         position: relative;
+        margin: auto 0;
     }
 
     .header-mobileButton-line {
