Fix: Arreglado problema con el copyright del footer

--- a/src/componentsContainer/Footer/style.css
+++ b/src/componentsContainer/Footer/style.css
@@ -73,10 +73,7 @@
 }
 
 .footer-copyright {
-    position: absolute;
-    bottom: 0;
-    right: 50%;
-    transform: translateX(50%);
+    text-align: center;
 }
 
 @keyframes marquee {
